# openai-build-week-realcart

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  scoring.test.ts  scoring.ts
docs/: architecture.md  frontend-backend-contract.md  submission-checklist.md  submission-package.md
evals/: cases.jsonl
fixtures/demo/: persona.json
services/api/: pyproject.toml
services/api/src/realcart_api/: __init__.py  assets.py  cli.py  main.py  output.py  pipeline.py  schemas.py  settings.py  visuals.py
services/api/src/realcart_api/agents/: __init__.py  aspiration.py  model_config.py  purchase_signal.py  report_manager.py  second_opinion.py
services/api/src/realcart_api/connectors/: __init__.py  base.py  fixture.py  gmail.py  live.py  oauth.py  pinterest.py
services/api/src/realcart_api/scoring/: __init__.py  gap.py
services/api/tests/: conftest.py
services/api/tests/integration/: test_api.py
services/api/tests/unit/: test_live_connectors.py  test_pipeline.py  test_scoring.py  test_visuals.py
